tests/regression/errors/better_lambda_error_errors.ctp

def (main:
    lambda(x: x+1)
)
    